# devops-learning-api

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: stage-1-lint-test.yml  stage-2-build-docker.yml  stage-3-deploy.yml  stage-4-security.yml  stage-5-observability.yml
app/: __init__.py  main.py
docs/: DEVOPS_GUIDE.md  SETUP_INSTRUCTIONS.md
tests/: test_main.py
